<androidx.cardview.widget.CardView
    android:id="@+id/cv2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/label_JORHDI"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/label_anio"
            android:textAlignment="center" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/btn_aceptar"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:drawableLeft="@drawable/ic_baseline_credit_card_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:text="@string/label_tarjeta" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
